--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.6",
+    "@vercel/analytics": "^1.3.1",
     "firebase": "^10.12.4",
     "next": "14.2.5",
     "react": "^18",
